--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta property="og:description" content="💥Super💥ID">
 <meta property="og:image" content="https://img2.akspic.ru/crops/1/4/0/8/5/158041/158041-lambordzhini_sian-lambordzhini_greh_fkp_37-lambordzhini-sportkar-lamborghini_countach-1920x1080.jpg">
   <title>New Promotion</title>
-  <meta name="description" content="Promo">
-  <meta name="keywords" content="Beauty">
-  <meta name="author" content="F1">
+  <meta name="description" content="Promo3">
+  <meta name="keywords" content="Beauty3">
+  <meta name="author" content="F13">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
