--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Like🔥id1951">
-<meta property="og:description" content="💥Super💥ID">
-<meta property="og:image" content="https://img2.akspic.ru/crops/1/4/0/8/5/158041/158041-lambordzhini_sian-lambordzhini_greh_fkp_37-lambordzhini-sportkar-lamborghini_countach-1920x1080.jpg">
+<meta property="og:title" content="Berita bagus untuk semua pria!">
+<meta property="og:description" content="Cara yang terbukti">
+<meta property="og:image" content="https://i.imgur.com/gSh6OGW.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo3">
   <meta name="keywords" content="Beauty3">
